--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ elseif( TARGET_ARCH STREQUAL "armhf" )
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc-8)
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++-8)
 	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "armhf")
+elseif( TARGET_ARCH STREQUAL "arm64" )
+    message("Building for arm64")
+    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc-12)
+    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++-12)
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "aarch64")
 else()
     message("Target Architecture not specified, not cross compiling")
 endif()
